NEW53628
Clicking in scrollbar gutter of select multiple scrolls by only a single line, but should scroll by one "page"
https://bugs.webkit.org/show_bug.cgi?id=53628
Summary Clicking in scrollbar gutter of select multiple scrolls by only a single line...
Adam Roben (:aroben)
Reported 2011-02-02 14:09:38 PST
To reproduce: 1. Go to data:text/html,<select%20multiple%20size=3><option>a<option>b<option>c<option>d<option>e<option>f<option>g<option>h<option>i<option>j<option>k<option>a<option>b<option>c<option>d<option>e<option>f<option>g<option>h<option>i<option>j<option>k<option>a<option>b<option>c<option>d<option>e<option>f<option>g<option>h<option>i<option>j<option>k<option>a<option>b<option>c<option>d<option>e<option>f<option>g<option>h<option>i<option>j<option>k 2. Click a few times in the lower part of the scrollbar gutter Each click only scrolls by a single line. It should instead scroll by one "page", for some reasonable definition of "page". This occurs in both Safari 5.0.3 and ToT.
Attachments
patch (2.29 KB, patch)
2011-05-30 05:21 PDT, Keishi Hattori
no flags
test not working as expected (1.36 KB, text/html)
2011-05-31 18:53 PDT, Keishi Hattori
no flags
Adam Roben (:aroben)
Comment 1 2011-02-02 14:10:39 PST
Keishi Hattori
Comment 2 2011-05-30 05:21:27 PDT
Kent Tamura
Comment 4 2011-05-30 06:13:01 PDT
Comment on attachment 95337 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=95337&action=review > Source/WebCore/ChangeLog:10 > + Manual test: select-page-scroll.html > + > + * manual-tests/select-page-scroll.html: Added. I think platform-dependent test is better tan manual test. We can write a test clicking a specific position, and put it to LayoutTests/platform/mac/fast/forms/
Keishi Hattori
Comment 5 2011-05-31 18:53:27 PDT
Created attachment 95531 [details] test not working as expected I've been trying to write a test using eventSender, but the scroll bar of select element is messed up in the test. Pixel test draws the scrolls bar fine, but the up/down buttons don't work when clicked and paging doesn't work (s.scrollTop is 0). There is a 10x12 region in the top right corner of the select element that seems to act like a scroll bar. My test works fine on a regular div with scrollbars. Is there something I can do?
Kent Tamura
Comment 6 2011-05-31 20:15:43 PDT
(In reply to comment #5) > Created an attachment (id=95531) [details] > test not working as expected I also tried - -webkit-scrollbar instead of platform-native one - Testing in onload for <body> - Add some delay to start the test. They didn't work. ok, let's give up an automated test ;-(
WebKit Commit Bot
Comment 7 2011-05-31 22:46:53 PDT
Comment on attachment 95337 [details] patch Clearing flags on attachment: 95337 Committed r87773: <http://trac.webkit.org/changeset/87773>
Note You need to log in before you can comment on or make changes to this bug.