2011-05-31  Keishi Hattori  <keishi@webkit.org>

Reviewed by Kent Tamura.

        Fix to enable page scroll of select element
        https://bugs.webkit.org/show_bug.cgi?id=53628

        Manual test: select-page-scroll.html

        * manual-tests/select-page-scroll.html: Added.
        * rendering/RenderListBox.cpp:
        (WebCore::RenderListBox::computeLogicalHeight): Fix min to max.

Canonical link: https://commits.webkit.org/77251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87773 268f45cc-cd09-0410-ab3c-d52691b4dbfc